# ssdownloader

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changelog.md  go.mod  go.sum  main.go
.github/workflows/: checkin.yml
cmd/: init.go  link.go  report.go  report_test.go  root.go  root_test.go  search.go  ticket.go  ticket_test.go
cmd/config/: jsonconfig.go  jsonconfig_test.go
cmd/config/testdata/: creds.json
downloader/: downloader.go  downloader_test.go
futils/: file_utils.go  file_utils_test.go
link/: linkhandler.go  linkhandler_test.go
reporting/: log.go  log_test.go
script/: audit  audit.ps1  bootstrap  bootstrap.ps1  build  build.ps1  cibuild.ps1  clean  clean.ps1  fmt  install  install.ps1  lint  lint.ps1  release  release.ps1  test  test.ps1  update.ps1
sendsafely/: api.go  api_test.go  combiner.go  combiner_test.go  decrypt.go  decrypt_test.go  download.go  download_test.go  parsing.go  parsing_test.go
sendsafely/testdata/: data-for-sendsafely-1-source.csv
sendsafely/testdata/combining/: mylog.txt
src/: args.rs  config.rs  lib.rs  link.rs  main.rs  sendsafely.rs
zendesk/: api.go  api_test.go  parser.go  parser_test.go
