[package]
name = "ssdownloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "suggestions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
dirs = "4.0"
curl = "0.4.43"
time = { version="0.3.9", features =["formatting", "macros"] }